fix：下層ページのhタグを修正

--- a/src/page-faq.html
+++ b/src/page-faq.html
@@ -39,11 +39,11 @@
 <body>
   <header class="header">
     <div class="header__inner">
-      <h1 class="header__logoBlock">
+      <div class="header__logoBlock">
         <a href="/" class="header__logoLink js-logoLink">
-          <img class="header__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
+          <img class="header__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
         </a>
-      </h1>
+      </div>
       <button class="header__drawer hamburger js-hamburger">
         <span></span>
         <span></span>
@@ -242,7 +242,7 @@
             <ul class="accordion__list">
               <li class="accordion__item js-accordion-item">
                 <div class="accordion__title js-accordion-title">
-                  <p class="accordion__title-text">ここに質問が入ります。</p>
+                  <h3 class="accordion__title-text">ここに質問が入ります。</h3>
                 </div>
                 <div class="accordion__content js-accordion-content">
                   <p class="accordion__text">
@@ -252,7 +252,7 @@
               </li>
               <li class="accordion__item js-accordion-item">
                 <div class="accordion__title js-accordion-title">
-                  <p class="accordion__title-text">ここに質問が入ります。</p>
+                  <h3 class="accordion__title-text">ここに質問が入ります。</h3>
                 </div>
                 <div class="accordion__content js-accordion-content">
                   <p class="accordion__text">
@@ -262,7 +262,7 @@
               </li>
               <li class="accordion__item js-accordion-item">
                 <div class="accordion__title js-accordion-title">
-                  <p class="accordion__title-text">ここに質問が入ります。</p>
+                  <h3 class="accordion__title-text">ここに質問が入ります。</h3>
                 </div>
                 <div class="accordion__content js-accordion-content">
                   <p class="accordion__text">
@@ -272,7 +272,7 @@
               </li>
               <li class="accordion__item js-accordion-item">
                 <div class="accordion__title js-accordion-title">
-                  <p class="accordion__title-text">ここに質問が入ります。</p>
+                  <h3 class="accordion__title-text">ここに質問が入ります。</h3>
                 </div>
                 <div class="accordion__content js-accordion-content">
                   <p class="accordion__text">
@@ -282,7 +282,7 @@
               </li>
               <li class="accordion__item js-accordion-item">
                 <div class="accordion__title js-accordion-title">
-                  <p class="accordion__title-text">ここに質問が入ります。</p>
+                  <h3 class="accordion__title-text">ここに質問が入ります。</h3>
                 </div>
                 <div class="accordion__content js-accordion-content">
                   <p class="accordion__text">
@@ -292,7 +292,7 @@
               </li>
               <li class="accordion__item js-accordion-item">
                 <div class="accordion__title js-accordion-title">
-                  <p class="accordion__title-text">ここに質問が入ります。</p>
+                  <h3 class="accordion__title-text">ここに質問が入ります。</h3>
                 </div>
                 <div class="accordion__content js-accordion-content">
                   <p class="accordion__text">
@@ -302,7 +302,7 @@
               </li>
               <li class="accordion__item js-accordion-item">
                 <div class="accordion__title js-accordion-title">
-                  <p class="accordion__title-text">ここに質問が入ります。</p>
+                  <h3 class="accordion__title-text">ここに質問が入ります。</h3>
                 </div>
                 <div class="accordion__content js-accordion-content">
                   <p class="accordion__text">
@@ -321,7 +321,7 @@
         <div class="contact__content">
           <div class="contact__top">
             <div class="contact__logoBlock under-line">
-              <img class="contact__logo" src="./assets/images/common/logo-green.png" alt="ヘッダーロゴ">
+              <img class="contact__logo" src="./assets/images/common/logo-green.png" alt="CodeUps">
             </div>
             <div class="contact__flex">
               <div class="contact__info text">
@@ -369,7 +369,7 @@
       <div class="footer__head">
         <div class="footer__logoBlock">
           <a href="/">
-            <img class="footer__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
+            <img class="footer__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
           </a>
         </div>
         <ul class="footer__sns-list">
