--- a/src/page-price.html
+++ b/src/page-price.html
@@ -39,11 +39,11 @@
 <body>
   <header class="header">
     <div class="header__inner">
-      <h1 class="header__logoBlock">
+      <div class="header__logoBlock">
         <a href="/" class="header__logoLink js-logoLink">
-          <img class="header__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
+          <img class="header__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
         </a>
-      </h1>
+      </div>
       <button class="header__drawer hamburger js-hamburger">
         <span></span>
         <span></span>
@@ -241,7 +241,7 @@
           <ul class="sub-price__list">
             <li class="sub-price__item">
               <div class="sub-price__header">
-                <h2 class="sub-price__heading">ライセンス講習</h2>
+                <h3 class="sub-price__heading">ライセンス講習</h3>
                 <div class="sub-price__img">
                   <picture>
                     <source srcset="./assets/images/sub/img-whale_pc.png" media="(min-width:768px)">
@@ -260,7 +260,7 @@
             </li>
             <li class="sub-price__item">
               <div class="sub-price__header">
-                <h2 class="sub-price__heading">体験ダイビング</h2>
+                <h3 class="sub-price__heading">体験ダイビング</h3>
                 <div class="sub-price__img">
                   <picture>
                     <source srcset="./assets/images/sub/img-whale_pc.png" media="(min-width:768px)">
@@ -281,7 +281,7 @@
             </li>
             <li class="sub-price__item">
               <div class="sub-price__header">
-                <h2 class="sub-price__heading">ファンダイビング</h2>
+                <h3 class="sub-price__heading">ファンダイビング</h3>
                 <div class="sub-price__img">
                   <picture>
                     <source srcset="./assets/images/sub/img-whale_pc.png" media="(min-width:768px)">
@@ -302,7 +302,7 @@
             </li>
             <li class="sub-price__item">
               <div class="sub-price__header">
-                <h2 class="sub-price__heading">スペシャルダイビング</h2>
+                <h3 class="sub-price__heading">スペシャルダイビング</h3>
                 <div class="sub-price__img">
                   <picture>
                     <source srcset="./assets/images/sub/img-whale_pc.png" media="(min-width:768px)">
@@ -329,7 +329,7 @@
         <div class="contact__content">
           <div class="contact__top">
             <div class="contact__logoBlock under-line">
-              <img class="contact__logo" src="./assets/images/common/logo-green.png" alt="ヘッダーロゴ">
+              <img class="contact__logo" src="./assets/images/common/logo-green.png" alt="CodeUps">
             </div>
             <div class="contact__flex">
               <div class="contact__info text">
@@ -377,7 +377,7 @@
       <div class="footer__head">
         <div class="footer__logoBlock">
           <a href="/">
-            <img class="footer__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
+            <img class="footer__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
           </a>
         </div>
         <ul class="footer__sns-list">
