--- a/src/page-privacy.html
+++ b/src/page-privacy.html
@@ -39,11 +39,11 @@
 <body>
   <header class="header">
     <div class="header__inner">
-      <h1 class="header__logoBlock">
+      <div class="header__logoBlock">
         <a href="/" class="header__logoLink js-logoLink">
-          <img class="header__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
+          <img class="header__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
         </a>
-      </h1>
+      </div>
       <button class="header__drawer hamburger js-hamburger">
         <span></span>
         <span></span>
@@ -299,7 +299,7 @@
         <div class="contact__content">
           <div class="contact__top">
             <div class="contact__logoBlock under-line">
-              <img class="contact__logo" src="./assets/images/common/logo-green.png" alt="ヘッダーロゴ">
+              <img class="contact__logo" src="./assets/images/common/logo-green.png" alt="CodeUps">
             </div>
             <div class="contact__flex">
               <div class="contact__info text">
@@ -347,7 +347,7 @@
       <div class="footer__head">
         <div class="footer__logoBlock">
           <a href="/">
-            <img class="footer__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
+            <img class="footer__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
           </a>
         </div>
         <ul class="footer__sns-list">
