--- a/src/page-site-map.html
+++ b/src/page-site-map.html
@@ -39,11 +39,11 @@
 <body>
   <header class="header">
     <div class="header__inner">
-      <h1 class="header__logoBlock">
+      <div class="header__logoBlock">
         <a href="/" class="header__logoLink js-logoLink">
-          <img class="header__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
+          <img class="header__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
         </a>
-      </h1>
+      </div>
       <button class="header__drawer hamburger js-hamburger">
         <span></span>
         <span></span>
@@ -243,34 +243,54 @@
               <div class="menu__column">
                 <div class="menu__item">
                   <div class="menu__title menu__title--sub-page">
-                    <a href="/archive-campaign.html">キャンペーン</a>
+                    <a href="/archive-campaign.html">
+                      <h2>キャンペーン</h2>
+                    </a>
                   </div>
                   <ul class="menu__list menu__list--sub-page">
-                    <li><a href="/archive-campaign.html">ライセンス取得</a></li>
-                    <li><a href="/archive-campaign.html">貸切体験ダイビング</a></li>
-                    <li><a href="/archive-campaign.html">ナイトダイビング</a></li>
+                    <li><a href="/archive-campaign.html">
+                        <h3>ライセンス取得</h3>
+                      </a></li>
+                    <li><a href="/archive-campaign.html">
+                        <h3>貸切体験ダイビング</h3>
+                      </a></li>
+                    <li><a href="/archive-campaign.html">
+                        <h3>ナイトダイビング</h3>
+                      </a></li>
                   </ul>
                 </div>
                 <div class="menu__item">
                   <div class="menu__title menu__title--sub-page">
-                    <a href="/page-about.html">私たちについて</a>
+                    <a href="/page-about.html">
+                      <h2>私たちについて</h2>
+                    </a>
                   </div>
                 </div>
               </div>
               <div class="menu__column">
                 <div class="menu__item">
                   <div class="menu__title menu__title--sub-page">
-                    <a href="/page-info.html">ダイビング情報</a>
+                    <a href="/page-info.html">
+                      <h2>ダイビング情報</h2>
+                    </a>
                   </div>
                   <ul class="menu__list menu__list--sub-page">
-                    <li><a href="/page-info.html">ライセンス取得</a></li>
-                    <li><a href="/page-info.html">体験ダイビング</a></li>
-                    <li><a href="/page-info.html">ファンダイビング</a></li>
+                    <li><a href="/page-info.html">
+                        <h3>ライセンス取得</h3>
+                      </a></li>
+                    <li><a href="/page-info.html">
+                        <h3>体験ダイビング</h3>
+                      </a></li>
+                    <li><a href="/page-info.html">
+                        <h3>ファンダイビング</h3>
+                      </a></li>
                   </ul>
                 </div>
                 <div class="menu__item">
                   <div class="menu__title menu__title--sub-page">
-                    <a href="/home.html">ブログ</a>
+                    <a href="/home.html">
+                      <h2>ブログ</h2>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -279,44 +299,64 @@
               <div class="menu__column">
                 <div class="menu__item">
                   <div class="menu__title menu__title--sub-page">
-                    <a href="/archive-voice.html">お客様の声</a>
+                    <a href="/archive-voice.html">
+                      <h2>お客様の声</h2>
+                    </a>
                   </div>
                 </div>
                 <div class="menu__item">
                   <div class="menu__title menu__title--sub-page">
-                    <a href="/page-price.html">料金一覧</a>
+                    <a href="/page-price.html">
+                      <h2>料金一覧</h2>
+                    </a>
                   </div>
                   <ul class="menu__list menu__list--sub-page">
-                    <li><a href="/page-price.html">ライセンス講習</a></li>
-                    <li><a href="/page-price.html">体験ダイビング</a></li>
-                    <li><a href="/page-price.html">ファンダイビング</a></li>
+                    <li><a href="/page-price.html">
+                        <h3>ライセンス講習</h3>
+                      </a></li>
+                    <li><a href="/page-price.html">
+                        <h3>体験ダイビング</h3>
+                      </a></li>
+                    <li><a href="/page-price.html">
+                        <h3>ファンダイビング</h3>
+                      </a></li>
                   </ul>
                 </div>
               </div>
               <div class="menu__column">
                 <div class="menu__item">
                   <div class="menu__title menu__title--sub-page">
-                    <a href="/page-faq.html">よくある質問</a>
+                    <a href="/page-faq.html">
+                      <h2>よくある質問</h2>
+                    </a>
                   </div>
                 </div>
                 <div class="menu__item">
                   <div class="menu__title menu__title--sub-page">
-                    <a href="/page-privacy.html">プライバシー<br class="u-mobile">ポリシー</a>
+                    <a href="/page-privacy.html">
+                      <h2>プライバシー<br class="u-mobile">ポリシー</h2>
+                    </a>
                   </div>
                 </div>
                 <div class="menu__item">
                   <div class="menu__title menu__title--sub-page">
-                    <a href="/page-terms-of-service.html">利用規約</a>
+                    <a href="/page-terms-of-service.html">
+                      <h2>利用規約</h2>
+                    </a>
                   </div>
                 </div>
                 <div class="menu__item">
                   <div class="menu__title menu__title--sub-page">
-                    <a href="/page-contact.html">お問い合わせ</a>
+                    <a href="/page-contact.html">
+                      <h2>お問い合わせ</h2>
+                    </a>
                   </div>
                 </div>
                 <div class="menu__item">
                   <div class="menu__title menu__title--sub-page">
-                    <a href="/page-site-map.html">サイトマップ</a>
+                    <a href="/page-site-map.html">
+                      <h2>サイトマップ</h2>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -331,7 +371,7 @@
         <div class="contact__content">
           <div class="contact__top">
             <div class="contact__logoBlock under-line">
-              <img class="contact__logo" src="./assets/images/common/logo-green.png" alt="ヘッダーロゴ">
+              <img class="contact__logo" src="./assets/images/common/logo-green.png" alt="CodeUps">
             </div>
             <div class="contact__flex">
               <div class="contact__info text">
@@ -379,7 +419,7 @@
       <div class="footer__head">
         <div class="footer__logoBlock">
           <a href="/">
-            <img class="footer__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
+            <img class="footer__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
           </a>
         </div>
         <ul class="footer__sns-list">
