--- a/src/page-thanks.html
+++ b/src/page-thanks.html
@@ -39,11 +39,11 @@
 <body class="page-container">
   <header class="header">
     <div class="header__inner">
-      <h1 class="header__logoBlock">
+      <div class="header__logoBlock">
         <a href="/" class="header__logoLink js-logoLink">
-          <img class="header__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
+          <img class="header__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
         </a>
-      </h1>
+      </div>
       <button class="header__drawer hamburger js-hamburger">
         <span></span>
         <span></span>
@@ -239,7 +239,7 @@
 
     <div id="page-thanks" class="page-thanks layout-page-thanks decoration-fish">
       <div class="page-thanks__inner inner">
-        <p class="page-thanks__text text-p">お問い合わせ内容を送信完了しました</p>
+        <h2 class="page-thanks__text text-p">お問い合わせ内容を送信完了しました</h2>
         <p class="page-thanks__sub-text text-p">
           このたびは、お問い合わせ頂き<br class="u-mobile">誠にありがとうございます。<br>
           お送り頂きました内容を確認の上、<br class="u-mobile">
@@ -260,7 +260,7 @@
       <div class="footer__head">
         <div class="footer__logoBlock">
           <a href="/">
-            <img class="footer__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
+            <img class="footer__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
           </a>
         </div>
         <ul class="footer__sns-list">
