--- a/src/404.html
+++ b/src/404.html
@@ -39,11 +39,11 @@
 <body class="error-page-body page-container">
   <header class="header">
     <div class="header__inner">
-      <h1 class="header__logoBlock">
+      <div class="header__logoBlock">
         <a href="/" class="header__logoLink js-logoLink">
-          <img class="header__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
+          <img class="header__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
         </a>
-      </h1>
+      </div>
       <button class="header__drawer hamburger js-hamburger">
         <span></span>
         <span></span>
@@ -254,7 +254,7 @@
       <div class="footer__head">
         <div class="footer__logoBlock">
           <a href="/">
-            <img class="footer__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
+            <img class="footer__logo" src="./assets/images/common/logo.svg" alt="CodeUps">
           </a>
         </div>
         <ul class="footer__sns-list">
