fix：下層ページのsectionタグを修正

--- a/src/404.html
+++ b/src/404.html
@@ -224,7 +224,7 @@
       </div>
     </div>
 
-    <div id="error-page" class="error-page">
+    <section class="error-page">
       <!-- パンくずリスト 後でプラグイン入れる -->
       <div class="breadcrumb breadcrumb--error-page">
         <div class="inner">
@@ -245,7 +245,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
   </main>
 
