--- a/src/archive-voice.html
+++ b/src/archive-voice.html
@@ -224,11 +224,11 @@
       </div>
     </div>
 
-    <div class="sub-mv sub-mv--sub-voice">
+    <section class="sub-mv sub-mv--sub-voice">
       <div class="sub-mv__title">
         <h1>Voice</h1>
       </div>
-    </div>
+    </section>
 
     <!-- パンくずリスト 後でプラグイン入れる -->
     <div class="breadcrumb">
@@ -237,7 +237,7 @@
       </div>
     </div>
 
-    <div id="sub-voice" class="sub-voice layout-sub-voice decoration-fish">
+    <section class="sub-voice layout-sub-voice decoration-fish">
       <div class="sub-voice__inner inner">
         <div class="category">
           <ul class="category__list">
@@ -450,7 +450,7 @@
           <a class="nextpostslink" rel="next" href="#"></a>
         </div>
       </div>
-    </div>
+    </section>
 
     <section class="contact layout-contact layout-contact--sub-voice">
       <div class="contact__inner inner">
