--- a/src/page-about.html
+++ b/src/page-about.html
@@ -224,11 +224,11 @@
       </div>
     </div>
 
-    <div class="sub-mv sub-mv--page-sub-about">
+    <section class="sub-mv sub-mv--page-sub-about">
       <div class="sub-mv__title">
         <h1>About us</h1>
       </div>
-    </div>
+    </section>
 
     <!-- パンくずリスト 後でプラグイン入れる -->
     <div class="breadcrumb">
@@ -237,7 +237,7 @@
       </div>
     </div>
 
-    <section class="sub-about layout-sub-about decoration-fish">
+    <div class="sub-about layout-sub-about decoration-fish">
       <div class="sub-about__inner inner">
         <div class="sub-about__about about">
           <div class="about__images">
@@ -268,33 +268,36 @@
             </div>
           </div>
         </div>
-        <div class="sub-about__gallery">
-          <div class="sub-about__section-title section-title">
-            <p class="section-title__eng">Gallery</p>
-            <h2 class="section-title__ja">フォト</h2>
-          </div>
-          <ul class="sub-about__list">
-            <li class="sub-about__item js-modal">
-              <img src="./assets/images/sub/about_1.jpg" alt="">
-            </li>
-            <li class="sub-about__item js-modal">
-              <img src="./assets/images/sub/about_2.jpg" alt="">
-            </li>
-            <li class="sub-about__item js-modal">
-              <img src="./assets/images/sub/about_3.jpg" alt="">
-            </li>
-            <li class="sub-about__item js-modal">
-              <img src="./assets/images/sub/about_4.jpg" alt="">
-            </li>
-            <li class="sub-about__item js-modal">
-              <img src="./assets/images/sub/about_5.jpg" alt="">
-            </li>
-            <li class="sub-about__item js-modal">
-              <img src="./assets/images/sub/about_6.jpg" alt="">
-            </li>
-          </ul>
-          <div class="sub-about__modal-background js-modal-background"></div>
+      </div>
+    </div>
+
+    <section class="gallery">
+      <div class="gallery__inner inner">
+        <div class="gallery__section-title section-title">
+          <p class="section-title__eng">Gallery</p>
+          <h2 class="section-title__ja">フォト</h2>
         </div>
+        <ul class="gallery__list">
+          <li class="gallery__item js-modal">
+            <img src="./assets/images/sub/about_1.jpg" alt="">
+          </li>
+          <li class="gallery__item js-modal">
+            <img src="./assets/images/sub/about_2.jpg" alt="">
+          </li>
+          <li class="gallery__item js-modal">
+            <img src="./assets/images/sub/about_3.jpg" alt="">
+          </li>
+          <li class="gallery__item js-modal">
+            <img src="./assets/images/sub/about_4.jpg" alt="">
+          </li>
+          <li class="gallery__item js-modal">
+            <img src="./assets/images/sub/about_5.jpg" alt="">
+          </li>
+          <li class="gallery__item js-modal">
+            <img src="./assets/images/sub/about_6.jpg" alt="">
+          </li>
+        </ul>
+        <div class="gallery__modal-background js-modal-background"></div>
       </div>
     </section>
 
