--- a/src/page-faq.html
+++ b/src/page-faq.html
@@ -223,11 +223,11 @@
         <p class="heroTitle__subtitle">into the ocean</p>
       </div>
     </div>
-    <div class="sub-mv sub-mv--sub-faq">
+    <section class="sub-mv sub-mv--sub-faq">
       <div class="sub-mv__title">
         <h1>FAQ</h1>
       </div>
-    </div>
+    </section>
     <!-- パンくずリスト 後でプラグイン入れる -->
     <div class="breadcrumb">
       <div class="inner">
@@ -235,7 +235,7 @@
       </div>
     </div>
 
-    <div id="faq" class="faq layout-faq decoration-fish">
+    <section class="faq layout-faq decoration-fish">
       <div class="faq__inner inner">
         <div class="faq__accordion">
           <div class="accordion js-accordion">
@@ -314,7 +314,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <section class="contact layout-sub-contact">
       <div class="contact__inner inner">
