--- a/src/page-price.html
+++ b/src/page-price.html
@@ -223,11 +223,11 @@
         <p class="heroTitle__subtitle">into the ocean</p>
       </div>
     </div>
-    <div class="sub-mv sub-mv--sub-price">
+    <section class="sub-mv sub-mv--sub-price">
       <div class="sub-mv__title">
         <h1>Price</h1>
       </div>
-    </div>
+    </section>
     <!-- パンくずリスト 後でプラグイン入れる -->
     <div class="breadcrumb">
       <div class="inner">
@@ -235,7 +235,7 @@
       </div>
     </div>
 
-    <div id="sub-price" class="sub-price layout-sub-price decoration-fish">
+    <section class="sub-price layout-sub-price decoration-fish">
       <div class="sub-price__inner inner">
         <div class="sub-price__content">
           <ul class="sub-price__list">
@@ -322,7 +322,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    </section>
 
     <section class="contact layout-sub-contact layout-sub-contact--sub-price">
       <div class="contact__inner inner">
