--- a/src/page-privacy.html
+++ b/src/page-privacy.html
@@ -223,11 +223,11 @@
         <p class="heroTitle__subtitle">into the ocean</p>
       </div>
     </div>
-    <div class="sub-mv sub-mv--page-privacy">
+    <section class="sub-mv sub-mv--page-privacy">
       <div class="sub-mv__title">
         <h1>Privacy Policy</h1>
       </div>
-    </div>
+    </section>
     <!-- パンくずリスト 後でプラグイン入れる -->
     <div class="breadcrumb">
       <div class="inner">
@@ -235,9 +235,9 @@
       </div>
     </div>
 
-    <div id="privacy" class="privacy layout-privacy decoration-fish">
+    <section class="privacy layout-privacy decoration-fish">
       <div class="privacy__inner inner">
-        <div class="site-policy">
+        <div class="privacy__site-policy site-policy">
           <h2 class="site-policy__title">プライバシーポリシー</h2>
           <div class="site-policy__text">
             <div class="site-policy__text-paragraph">
@@ -292,7 +292,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <section class="contact layout-sub-contact layout-sub-contact--privacy">
       <div class="contact__inner inner">
