--- a/src/page-site-map.html
+++ b/src/page-site-map.html
@@ -223,11 +223,11 @@
         <p class="heroTitle__subtitle">into the ocean</p>
       </div>
     </div>
-    <div class="sub-mv sub-mv--site-map">
+    <section class="sub-mv sub-mv--site-map">
       <div class="sub-mv__title">
         <h1>Site MAP</h1>
       </div>
-    </div>
+    </section>
     <!-- パンくずリスト 後でプラグイン入れる -->
     <div class="breadcrumb">
       <div class="inner">
@@ -235,7 +235,7 @@
       </div>
     </div>
 
-    <div id="site-map" class="site-map layout-site-map">
+    <section class="site-map layout-site-map">
       <div class="site-map__inner inner">
         <div class="site-map__menu">
           <div class="menu menu--sub-page">
@@ -364,7 +364,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <section class="contact layout-sub-contact--site-map">
       <div class="contact__inner inner">
