--- a/src/page-terms-of-service.html
+++ b/src/page-terms-of-service.html
@@ -223,11 +223,11 @@
         <p class="heroTitle__subtitle">into the ocean</p>
       </div>
     </div>
-    <div class="sub-mv sub-mv--page-privacy">
+    <section class="sub-mv sub-mv--page-privacy">
       <div class="sub-mv__title">
         <h1>Terms of Service</h1>
       </div>
-    </div>
+    </section>
     <!-- パンくずリスト 後でプラグイン入れる -->
     <div class="breadcrumb">
       <div class="inner">
@@ -235,9 +235,9 @@
       </div>
     </div>
 
-    <div id="terms-of-service" class="terms-of-service layout-terms-of-service decoration-fish">
+    <section class="terms-of-service layout-terms-of-service decoration-fish">
       <div class="terms-of-service__inner inner">
-        <div class="site-policy">
+        <div class="terms-of-service__site-policy site-policy">
           <h2 class="site-policy__title">利用規約</h2>
           <div class="site-policy__text">
             <div class="site-policy__text-paragraph">
@@ -283,7 +283,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <section class="contact layout-sub-contact layout-sub-contact--terms-of-service">
       <div class="contact__inner inner">
