--- a/src/single.html
+++ b/src/single.html
@@ -223,11 +223,11 @@
         <p class="heroTitle__subtitle">into the ocean</p>
       </div>
     </div>
-    <div class="sub-mv sub-mv--sub-blog">
+    <section class="sub-mv sub-mv--sub-blog">
       <div class="sub-mv__title">
         <h1>Blog</h1>
       </div>
-    </div>
+    </section>
     <!-- パンくずリスト 後でプラグイン入れる -->
     <div class="breadcrumb">
       <div class="inner">
@@ -235,7 +235,7 @@
       </div>
     </div>
 
-    <div id="sub-blog" class="sub-blog layout-sub-blog layout-sub-blog--post decoration-fish">
+    <section class="sub-blog layout-sub-blog layout-sub-blog--post decoration-fish">
       <div class="sub-blog__inner inner">
         <div class="sub-blog__container">
           <div class="sub-blog__main sub-blog__main--post">
@@ -419,7 +419,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <section class="contact layout-sub-contact layout-sub-contact--sub-blog">
       <div class="contact__inner inner">
