--- a/src/archive-campaign.html
+++ b/src/archive-campaign.html
@@ -224,11 +224,11 @@
       </div>
     </div>
 
-    <div class="sub-mv sub-mv--sub-campaign">
+    <section class="sub-mv sub-mv--sub-campaign">
       <div class="sub-mv__title">
         <h1>Campaign</h1>
       </div>
-    </div>
+    </section>
 
     <!-- パンくずリスト 後でプラグイン入れる -->
     <div class="breadcrumb">
@@ -237,7 +237,7 @@
       </div>
     </div>
 
-    <section id="sub-campaign" class="sub-campaign layout-sub-campaign decoration-fish">
+    <section class="sub-campaign layout-sub-campaign decoration-fish">
       <div class="sub-campaign__inner inner">
         <div class="category">
           <ul class="category__list">
