--- a/src/index.html
+++ b/src/index.html
@@ -265,7 +265,7 @@
       </div>
     </div>
 
-    <section id="campaign" class="campaign layout-campaign">
+    <section class="campaign layout-campaign">
       <div class="campaign__inner inner">
         <div class="campaign__section-title section-title">
           <p class="section-title__eng">Campaign</p>
@@ -511,7 +511,7 @@
       </div>
     </section>
 
-    <section id="about" class="about layout-about">
+    <section class="about layout-about">
       <div class="about__inner inner">
         <div class="about__section-title section-title">
           <p class="section-title__eng">About us</p>
@@ -552,7 +552,7 @@
       </div>
     </section>
 
-    <section id="info" class="info layout-info">
+    <section class="info layout-info">
       <div class="info__inner inner">
         <div class="info__section-title section-title">
           <p class="section-title__eng">Information</p>
@@ -583,7 +583,7 @@
       </div>
     </section>
 
-    <section id="blog" class="blog layout-blog">
+    <section class="blog layout-blog">
       <div class="blog__inner inner">
         <div class="blog__section-title section-title section-title--white">
           <p class="section-title__eng">Blog</p>
@@ -650,7 +650,7 @@
       </div>
     </section>
 
-    <section id="voice" class="voice layout-voice">
+    <section class="voice layout-voice">
       <div class="voice__inner inner">
         <div class="voice__section-title section-title">
           <p class="section-title__eng">Voice</p>
@@ -727,7 +727,7 @@
       </div>
     </section>
 
-    <section id="price" class="price layout-price">
+    <section class="price layout-price">
       <div class="price__inner inner">
         <div class="price__section-title section-title">
           <p class="section-title__eng">Price</p>
@@ -799,7 +799,7 @@
       </div>
     </section>
 
-    <section id="contact" class="contact layout-contact">
+    <section class="contact layout-contact">
       <div class="contact__inner inner">
         <div class="contact__content">
           <div class="contact__top">
@@ -841,7 +841,7 @@
       </div>
     </section>
 
-    <div class="to-top" id="page-top">
+    <div class="to-top">
       <a href="#"><span></span></a>
     </div>
 
