--- a/src/page-thanks.html
+++ b/src/page-thanks.html
@@ -224,11 +224,11 @@
       </div>
     </div>
 
-    <div class="sub-mv sub-mv--page-contact">
+    <section class="sub-mv sub-mv--page-contact">
       <div class="sub-mv__title">
         <h1>Contact</h1>
       </div>
-    </div>
+    </section>
 
     <!-- パンくずリスト 後でプラグイン入れる -->
     <div class="breadcrumb">
@@ -237,7 +237,7 @@
       </div>
     </div>
 
-    <div id="page-thanks" class="page-thanks layout-page-thanks decoration-fish">
+    <section class="page-thanks layout-page-thanks decoration-fish">
       <div class="page-thanks__inner inner">
         <h2 class="page-thanks__text text-p">お問い合わせ内容を送信完了しました</h2>
         <p class="page-thanks__sub-text text-p">
@@ -247,7 +247,7 @@
           また、ご記入頂いたメールアドレスへ、<br class="u-mobile">
           自動返信の確認メールをお送りしております。</p>
       </div>
-    </div>
+    </section>
 
     <div class="to-top" id="page-top">
       <a href="#"><span></span></a>
