fix：ロゴの拡張子をsvgに修正

--- a/src/page-terms-of-service.html
+++ b/src/page-terms-of-service.html
@@ -290,7 +290,7 @@
         <div class="contact__content">
           <div class="contact__top">
             <div class="contact__logoBlock under-line">
-              <img class="contact__logo" src="./assets/images/common/logo-green.png" alt="CodeUps">
+              <img class="contact__logo" src="./assets/images/common/logo-green.svg" alt="CodeUps">
             </div>
             <div class="contact__flex">
               <div class="contact__info text">
