fix：sub-mvの画像を修正、共通化

--- a/src/page-terms-of-service.html
+++ b/src/page-terms-of-service.html
@@ -223,7 +223,7 @@
         <p class="heroTitle__subtitle">into the ocean</p>
       </div>
     </div>
-    <section class="sub-mv sub-mv--page-privacy">
+    <section class="sub-mv sub-mv--site">
       <div class="sub-mv__title">
         <h1>Terms of Service</h1>
       </div>
