--- a/src/page-privacy.html
+++ b/src/page-privacy.html
@@ -223,7 +223,7 @@
         <p class="heroTitle__subtitle">into the ocean</p>
       </div>
     </div>
-    <section class="sub-mv sub-mv--page-privacy">
+    <section class="sub-mv sub-mv--site">
       <div class="sub-mv__title">
         <h1>Privacy Policy</h1>
       </div>
