--- a/src/page-site-map.html
+++ b/src/page-site-map.html
@@ -223,7 +223,7 @@
         <p class="heroTitle__subtitle">into the ocean</p>
       </div>
     </div>
-    <section class="sub-mv sub-mv--site-map">
+    <section class="sub-mv sub-mv--site">
       <div class="sub-mv__title">
         <h1>Site MAP</h1>
       </div>
