--- a/src/page-site-map.html
+++ b/src/page-site-map.html
@@ -366,7 +366,7 @@
       </div>
     </section>
 
-    <section class="contact layout-sub-contact--site-map">
+    <section class="contact layout-sub-contact layout-sub-contact--site-map">
       <div class="contact__inner inner">
         <div class="contact__content">
           <div class="contact__top">
