--- a/src/page-info.html
+++ b/src/page-info.html
@@ -239,17 +239,17 @@
       <div class="sub-info__inner inner">
         <div class="sub-info__content">
           <div class="sub-info__tab tab">
-            <ul class="tab__button-list">
-              <li class="tab__button js-tab-button is-active">
+            <div class="tab__button-list">
+              <a id="tab1" class="tab__button js-tab-button">
                 <h2 class="tab__button-title">ライセンス<br class="u-mobile">講習</h2>
-              </li>
-              <li class="tab__button js-tab-button">
+              </a>
+              <a id="tab2" class="tab__button js-tab-button">
                 <h2 class="tab__button-title">ファン<br class="u-mobile">ダイビング</h2>
-              </li>
-              <li class="tab__button js-tab-button">
+              </a>
+              <a id="tab3" class="tab__button js-tab-button">
                 <h2 class="tab__button-title">体験<br class="u-mobile">ダイビング</h2>
-              </li>
-            </ul>
+              </a>
+            </div>
             <div class="tab__contents">
               <div class="tab__content js-tab-content">
                 <div class="tab__content-main">
