--- a/src/index.html
+++ b/src/index.html
@@ -77,9 +77,9 @@
                       <a href="/page-info.html">ダイビング情報</a>
                     </div>
                     <ul class="menu__list">
-                      <li><a href="/page-info.html#info1">ライセンス講習</a></li>
-                      <li><a href="/page-info.html#info2">体験ダイビング</a></li>
-                      <li><a href="/page-info.html#info3">ファンダイビング</a></li>
+                      <li><a href="/page-info.html#tab1">ライセンス講習</a></li>
+                      <li><a href="/page-info.html#tab2">体験ダイビング</a></li>
+                      <li><a href="/page-info.html#tab3">ファンダイビング</a></li>
                     </ul>
                   </div>
                   <div class="menu__item">
